<resources>
    <string name="app_name">WanAndroid</string>
    <string name="v_version_name">V%s</string>

    <string name="home">首页</string>
    <string name="project">项目</string>
    <string name="ground">广场</string>
    <string name="wechat_official_account">公众号</string>
    <string name="mine">我的</string>
    <string name="login">登陆</string>
    <string name="user_name">用户名</string>
    <string name="pwd">密码</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="register">注册</string>
    <string name="plz_login">请登陆</string>
    <string name="mine_integral">我的积分</string>
    <string name="now_integral">当前积分:</string>
    <string name="mine_article">我的分享</string>
    <string name="mine_star">我的收藏</string>
    <string name="mine_todo">我的待办</string>
    <string name="mine_practice">我的实践</string>
    <string name="clear_cache">清理缓存</string>
    <string name="check_update">检查更新</string>
    <string name="exit">退出</string>
    <string name="scan_with_console">持续扫描并打印</string>
    <string name="scan_normal_scene">一般扫描场景</string>
    <string name="collect">收藏</string>
    <string name="search">搜索</string>
    <string name="add">新增</string>
    <string name="scan">扫描</string>
    <string name="more">更多</string>
    <string name="map">地图</string>
    <string name="pause">暂停</string>
    <string name="play">播放</string>
    <string name="resume">恢复</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="commit">提交</string>
    <string name="plz_input_query">请输入检索内容</string>
    <string name="plz_input_username">请输入用户名</string>
    <string name="tip_username">用户名不能少于3位</string>
    <string name="tip_pwd">密码长度为6-20位</string>
    <string name="short_message_vf">短信验证码</string>
    <string name="phone_number">手机号码</string>
    <string name="obtain_verify_code">获取验证码</string>
    <string name="confirm_pwd">确认密码</string>
    <string name="read_and_confirm">阅读并同意</string>
    <string name="privacy_policy">《隐私政策》</string>
    <string name="and">和</string>
    <string name="service_agreement">《服务协议》</string>
    <string name="register_and_login">注册并登陆</string>
    <string name="tip_pwd_not_same">密码输入不一致</string>
    <string name="confirm_to_clear_cache">是否要清除缓存？</string>
    <string name="tip">提示</string>

    <string name="tip_first_use">感谢您使用我们的产品！我们非常重视您的个人信息和隐私保护。我们将通过<a>《用户协议》</a>与<a>《隐私政策》</a>帮助您了解我们如何收集、处理个人信息。
        \n1.我们可能会申请电话权限，读取手机设备ID,获取手机在局域网的ip，用于信息展示、账号登录等主要功能。
        \n2.我们可能会申请存储权限，在本地记录崩溃日志信息（如有）。
        \n3.我们可能会申请位置权限，用于局域网摄像头设备扫描功能。
        \n4.未经您同意，我们不会像其他第三方提供您的信息，并会采用业界先进的安全措施保护您的信息安全。
    </string>
    <string name="agreement">用户政策</string>
    <string name="privacy">隐私协议</string>
    <string name="no_agree">不同意</string>
    <string name="agree">同意</string>

    <string-array name="items_dialog_learn">
        <item>Red</item>
        <item>Yellow</item>
        <item>Blue</item>
    </string-array>
</resources>