<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_search"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>
    <item android:id="@+id/action_collect"
        android:icon="@drawable/ic_not_collect"
        android:title="@string/collect"
        app:showAsAction="always"/>
    <item android:id="@+id/action_add"
        android:icon="@drawable/ic_add_list_item"
        app:showAsAction="never"
        android:orderInCategory="100"
        android:title="@string/add"/>
    <item android:id="@+id/action_scan"
        android:icon="@drawable/ic_scan"
        android:title="@string/scan"
        android:orderInCategory="99"
        app:showAsAction="never"/>
</menu>