<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/popup_inline"
        android:elevation="4dp"
        android:orientation="vertical"
        android:paddingHorizontal="3dp"
        android:paddingTop="9dp"
        android:paddingBottom="3dp">

        <LinearLayout
            android:id="@+id/ll_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/icon_hw_middle"
                android:layout_height="@dimen/icon_hw_middle"
                android:layout_margin="@dimen/margin_small"
                android:src="@drawable/ic_add_list_item" />

            <TextView
                style="@style/Widget.MaterialComponents.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_small"
                android:text="@string/add" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_scan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/icon_hw_middle"
                android:layout_height="@dimen/icon_hw_middle"
                android:layout_margin="@dimen/margin_small"
                android:src="@drawable/ic_scan" />

            <TextView
                style="@style/Widget.MaterialComponents.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_small"
                android:text="@string/scan" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/icon_hw_middle"
                android:layout_height="@dimen/icon_hw_middle"
                android:layout_margin="@dimen/margin_small"
                android:src="@drawable/ic_map" />

            <TextView
                style="@style/Widget.MaterialComponents.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_small"
                android:text="@string/map" />

        </LinearLayout>

    </LinearLayout>
</layout>