<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data></data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_login">

        <androidx.cardview.widget.CardView
            android:id="@+id/login_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            app:cardCornerRadius="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:layout_marginEnd="@dimen/margin_normal"
                    app:boxBackgroundColor="@color/colorWhite"
                    app:startIconDrawable="@drawable/ic_user">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_username"
                        style="@style/AppCompatEditTextMine"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/user_name"
                        android:text="" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_marginEnd="@dimen/margin_normal"
                    app:passwordToggleEnabled="true"
                    app:boxBackgroundColor="@color/colorWhite"
                    app:startIconDrawable="@drawable/ic_pwd">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_password"
                        style="@style/AppCompatEditTextMine"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/pwd"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:text=""
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_login"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:layout_marginEnd="@dimen/margin_normal"
                    android:backgroundTint="@color/colorPrimary"
                    android:insetTop="6dp"
                    android:insetBottom="6dp"
                    android:text="@string/login"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_marginEnd="@dimen/margin_normal"
                    android:layout_marginBottom="@dimen/margin_normal"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">


                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="true"
                        android:paddingStart="@dimen/margin_normal"
                        android:paddingTop="@dimen/margin_small"
                        android:paddingEnd="@dimen/margin_normal"
                        android:paddingBottom="@dimen/margin_small"
                        android:text="@string/register"
                        android:textColor="@drawable/selector_click_state_txt_color_blue"
                        android:textSize="14sp" />

                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>